--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -81,3 +81,20 @@ body {
     border-bottom: 0;
   }
 }
+
+.loading{
+
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  img.logo {
+    width: 100px;
+    height: 100px;
+    margin: auto;
+  }
+
+}
