--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3036,3 +3036,16 @@ body {
     border-bottom: 0;
   }
 }
+.loading {
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading img.logo {
+  width: 100px;
+  height: 100px;
+  margin: auto;
+}
