--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -81,7 +81,7 @@ body {
     border-bottom: 0;
   }
 }
-
+// loading view
 .loading{
 
   width: 100vw;
@@ -97,4 +97,31 @@ body {
     margin: auto;
   }
 
+}
+
+// login view
+
+#login{
+
+  .login_form{
+
+    margin-top:25%;
+    width: 100%;
+    height: 50vh;
+
+    border: 2px solid @light-grey;
+    border-radius: 20px;
+    margin-left:auto;
+    margin-right:auto;
+    max-width: 490px;
+  }
+
+  #logintitle{
+    padding-top: 50px;
+  }
+
+  .font-title{
+    color: @grey;
+    font-size: 28pt;
+  }
 }
