--- a/app/assets/css/colors.less
+++ b/app/assets/css/colors.less
@@ -1,8 +1,26 @@
 @master: red;
 @blue: #31ABDF;
 @light-blue: #31ABDF;
-@grey:#BEBEBE;
-@light-grey: #EDEDED;
+@grey:#808080;
+@light-grey: #E5E5E5;
 @red: #E33243;
 @green : #5BC918;
 @white: white;
+@smart: #D93E5F;
+
+.color-grey{
+  color: @grey;
+}
+.color-smart{
+  color: @smart;
+}
+
+.bgcolor-smart{
+  background-color: @smart;
+}
+
+.bgcolor-grey{
+  background-color: @grey;
+}
+
+
