--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+.color-grey {
+  color: #808080;
+}
+.color-smart {
+  color: #D93E5F;
+}
+.bgcolor-smart {
+  background-color: #D93E5F;
+}
+.bgcolor-grey {
+  background-color: #808080;
+}
 /*!
   Ionicons, v2.0.0
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
@@ -3048,4 +3060,21 @@ body {
   width: 100px;
   height: 100px;
   margin: auto;
+}
+#login .login_form {
+  margin-top: 25%;
+  width: 100%;
+  height: 50vh;
+  border: 2px solid #E5E5E5;
+  border-radius: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 490px;
+}
+#login #logintitle {
+  padding-top: 50px;
+}
+#login .font-title {
+  color: #808080;
+  font-size: 28pt;
 }
