--- a/app/assets/css/colors.less
+++ b/app/assets/css/colors.less
@@ -1,12 +1,14 @@
-@master: red;
+@master: #D93E5F;
 @blue: #31ABDF;
 @light-blue: #31ABDF;
+@mid-grey:#939393;
 @grey:#808080;
 @light-grey: #E5E5E5;
-@red: #E33243;
-@green : #5BC918;
+@red: #D93E5F;
+@green : #24C40D;
 @white: white;
 @smart: #D93E5F;
+@light-red: #FDE9EA;
 
 .color-grey{
   color: @grey;
