--- a/app/assets/css/fonts.css
+++ b/app/assets/css/fonts.css
@@ -22,32 +22,38 @@
 @font-face {
   font-family: 'RobotoLight';
   src: url("../fonts/Roboto/Roboto-Light.ttf") format("truetype");
+  font-weight: 300;
 }
 @font-face {
   font-family: 'RobotoLightItalic';
   src: url("../fonts/Roboto/Roboto-LightItalic.ttf") format("truetype");
   font-style: italic, oblique;
+  font-weight: 300;
 }
 @font-face {
   font-family: 'Roboto';
   src: url("../fonts/Roboto/Roboto-Black.ttf") format("truetype");
+  font-weight: 500;
 }
 /** Regular Italic**/
 @font-face {
   font-family: 'RobotoItalic';
   src: url("../fonts/Roboto/Roboto-BlackItalic.ttf") format("truetype");
   font-style: italic, oblique;
+  font-weight: 500;
 }
 /** Medium **/
 @font-face {
   font-family: 'RobotoMedium';
   src: url("../fonts/Roboto/Roboto-Medium.ttf") format("truetype");
+  font-weight: 600;
 }
 /** Medium Italic **/
 @font-face {
-  font-family: 'RobotoMedium';
+  font-family: 'RobotoMediumItalic';
   src: url("../fonts/Roboto/Roboto-MediumItalic.ttf") format("truetype");
   font-style: italic, oblique;
+  font-weight: 600;
 }
 /** Bold **/
 @font-face {
