--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3009,13 +3009,13 @@
 }
 @font-face {
   font-family: 'Roboto';
-  src: url("../fonts/Roboto/Roboto-Black.ttf") format("truetype");
+  src: url("../fonts/Roboto/Roboto-Regular.ttf") format("truetype");
   font-weight: 500;
 }
 /** Regular Italic**/
 @font-face {
   font-family: 'RobotoItalic';
-  src: url("../fonts/Roboto/Roboto-BlackItalic.ttf") format("truetype");
+  src: url("../fonts/Roboto/Roboto-Italic.ttf") format("truetype");
   font-style: italic, oblique;
   font-weight: 500;
 }
@@ -3045,12 +3045,14 @@
   font-weight: bold;
   font-style: italic, oblique;
 }
+* {
+  font-family: Roboto;
+}
 /* Space out content a bit */
 body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background-color: white;
-  font-family: Roboto;
 }
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -3132,7 +3134,13 @@ body {
   height: 100px;
   margin: auto;
 }
-#login .login_form {
+#login .subtitle,
+#choose_city .subtitle {
+  font-family: Roboto;
+  color: #808080;
+}
+#login .login_form,
+#choose_city .login_form {
   margin-top: 25%;
   width: 100%;
   height: 442px;
@@ -3142,10 +3150,12 @@ body {
   margin-right: auto;
   max-width: 500px;
 }
-#login #logintitle {
+#login #logintitle,
+#choose_city #logintitle {
   padding-top: 50px;
 }
-#login .font-title {
+#login .font-title,
+#choose_city .font-title {
   color: #808080;
   font-size: 28pt;
 }
@@ -3242,4 +3252,55 @@ form.communityform .community-control:hover {
 .community_link:focus {
   color: #939393;
   text-decoration: none;
+}
+.form-control:focus {
+  outline: 0 !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+input,
+textarea {
+  outline: none;
+  box-shadow: none !important;
+}
+.ui-select-bootstrap .ui-select-choices-row > span:hover,
+.ui-select-bootstrap .ui-select-choices-row > span:focus {
+  text-decoration: none;
+  color: black;
+  background-color: #E5E5E5;
+}
+.community-ui-select .ui-select-match-text {
+  padding-left: 10px;
+}
+.community-ui-select .ui-select-toggle {
+  border: none;
+  border-bottom: 2px solid #E5E5E5;
+  box-shadow: none;
+  border-radius: 0;
+  padding-left: 0;
+  pointer-events: auto;
+}
+.community-ui-select .ui-select-toggle:hover {
+  color: #777;
+  color: rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+}
+.community-ui-select .ui-select-search {
+  outline: 0;
+  box-shadow: none;
+  border: none !important;
+  outline: none;
+  outline-offset: -2px;
+  background-image: none;
+}
+.community-ui-select .ui-select-search:hover {
+  color: #777;
+  color: rgba(0, 0, 0, 0.7);
+  cursor: pointer;
+}
+.community-ui-select .ui-select-search:focus,
+.community-ui-select .ui-select-search:active {
+  outline: 0 !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
 }
