--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3053,6 +3053,7 @@ body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background-color: white;
+  min-width: 600px;
 }
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
