--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -10,6 +10,7 @@ body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background-color: @white;
+  min-width: 800px !important;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
