--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -258,13 +258,13 @@ form.communityform {
 }
 
 .btn-new{
-  font-family: RobotoMedium !important;
+  font-family: RobotoBold !important;
   font-weight: 500;
   background-color: @white;
   border: 1px solid @green;
   border-radius: 5px;
   color: @green;
-  font-size: 14px;
+  font-size: 16px;
   padding: 10px 15px;
 
   &:hover, &:focus, &:active{
@@ -357,5 +357,15 @@ input, textarea {
     color: @grey;
     font-family: Roboto;
     font-size: 14px;
+  }
+
+  .menu_link{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-decoration: none;
+  }
+
+  .height-30px{
+    height: 30px;
   }
 }
