--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -88,6 +88,10 @@ body {
   font-family: RobotoLight;
 }
 
+.font-bold{
+  font-family: RobotoBold;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 48em) {
   /* Remove the padding we set earlier */
@@ -195,6 +199,10 @@ form.communityform {
       cursor: pointer;
     }
   }
+}
+
+.pointer{
+  cursor: pointer;
 }
 
 .box-login-invalid{
