--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -363,7 +363,7 @@ input, textarea {
 /*** HOME **/
 #home {
   .navbar_page_title{
-    color: @grey;
+    color: @mid-grey;
     font-family: Roboto;
     font-size: 14px;
   }
@@ -376,5 +376,12 @@ input, textarea {
 
   .height-30px{
     height: 30px;
+  }
+}
+
+#container_view{
+
+  & > div:first-child{
+    margin-top:40px;
   }
 }
