--- a/app/assets/css/ligature.css
+++ b/app/assets/css/ligature.css
@@ -1,4 +1,11 @@
 /* CSS */
+/**
+HOW TO USE
+<span class="lsf">flickr</span>
+
+http://kudakurage.com/ligature_symbols/
+
+ */
 @font-face {
   font-family: 'LigatureSymbols';
   src: url('../fonts/LigatureSymbols/LigatureSymbols-2.11.eot');
