--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -408,3 +408,18 @@ input, textarea {
     margin-top:5px
   }
 }
+
+.search-icon{
+  position: absolute;
+  font-size: 28px;
+  color: @mid-grey;
+  bottom: 2px;
+}
+
+.search-input{
+  margin-left:10px;
+  border: none;
+  font-family: Roboto;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
