--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3427,3 +3427,16 @@ textarea {
 #container_view .page_content {
   margin-top: 5px;
 }
+.search-icon {
+  position: absolute;
+  font-size: 28px;
+  color: #939393;
+  bottom: 2px;
+}
+.search-input {
+  margin-left: 10px;
+  border: none;
+  font-family: Roboto;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
