--- a/app/assets/css/colors.less
+++ b/app/assets/css/colors.less
@@ -28,4 +28,12 @@
   background-color: @grey;
 }
 
+.bgcolor-light-grey{
+  background-color: @light-grey;
+}
+
+.bgcolor-mid-grey{
+  background-color: @mid-grey;
+}
+
 
