--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -11,7 +11,7 @@ body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background-color: @white;
-  min-width: 800px !important;
+  min-width: 840px !important;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -21,7 +21,10 @@ body {
   padding-right: 1rem;
   padding-left: 1rem;
 }
-
+.master-uiview{
+  width:75%;
+  margin-left:12.5%;
+}
 /* Custom page header */
 .header {
   padding-bottom: 1rem;
@@ -84,6 +87,16 @@ body {
 
 .font-large{
   font-size: 18px;
+}
+.roboto-slab{
+  font-family:RobotoSlabRegular !important;
+}
+.roboto-slab-bold{
+  font-family:RobotoSlabBold !important;
+}
+
+.roboto-slab-light{
+  font-family:RobotoSlabLight !important;
 }
 
 .font-light{
@@ -162,6 +175,14 @@ body {
 }
 .no-padding{
   padding: 0 !important;
+}
+
+.padding-top-5{
+  padding-top: 5px;
+}
+
+.no-margin{
+  margin: 0 !important;
 }
 .space-15{
   height: 15px;
@@ -422,4 +443,9 @@ input, textarea {
   font-family: Roboto;
   font-size: 18px;
   margin-bottom: 10px;
+}
+
+.img-preview-article{
+  width: 120px;
+  height: 90px;
 }
