--- a/app/assets/css/colors.css
+++ b/app/assets/css/colors.css
@@ -13,3 +13,9 @@
 .bgcolor-grey {
   background-color: #808080;
 }
+.bgcolor-light-grey {
+  background-color: #E5E5E5;
+}
+.bgcolor-mid-grey {
+  background-color: #939393;
+}
