--- a/app/assets/css/colors.less
+++ b/app/assets/css/colors.less
@@ -1,6 +1,6 @@
 @master: #D93E5F;
-@blue: #31ABDF;
-@light-blue: #31ABDF;
+@blue: #48AACC;
+@light-blue: #48AACC;
 @mid-grey:#939393;
 @grey:#808080;
 @light-grey: #E5E5E5;
@@ -15,6 +15,9 @@
 }
 .color-mid-grey{
   color: @mid-grey;
+}
+.color-blue{
+  color: @blue;
 }
 .color-smart{
   color: @smart;
