--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -322,6 +322,7 @@ form.communityform {
 
 
   &:hover, &:focus, &:active{
+    border: 2px solid @mid-grey !important;
     color: @mid-grey;
   }
 }
