--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3247,6 +3247,9 @@ body {
 .padding-top-5 {
   padding-top: 5px;
 }
+.padding-top-10 {
+  padding-top: 10px;
+}
 .no-margin {
   margin: 0 !important;
 }
