--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -180,6 +180,9 @@ body {
 .padding-top-5{
   padding-top: 5px;
 }
+.padding-top-10{
+  padding-top: 10px;
+}
 
 .no-margin{
   margin: 0 !important;
