--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -11,6 +11,9 @@
 .color-smart {
   color: #D93E5F;
 }
+.color-green {
+  color: #24C40D;
+}
 .bgcolor-smart {
   background-color: #D93E5F;
 }
@@ -3249,6 +3252,9 @@ body {
 }
 .padding-top-10 {
   padding-top: 10px;
+}
+.padding-top-15 {
+  padding-top: 15px;
 }
 .no-margin {
   margin: 0 !important;
