--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -183,7 +183,9 @@ body {
 .padding-top-10{
   padding-top: 10px;
 }
-
+.padding-top-15{
+  padding-top: 15px;
+}
 .no-margin{
   margin: 0 !important;
 }
