added new channel view

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3130,6 +3130,9 @@ body {
   margin-bottom: 0;
   line-height: 3rem;
 }
+.margin-top-50px {
+  margin-top: 50px !important;
+}
 /* Custom page footer */
 .footer {
   padding-top: 1.5rem;
