--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -2,6 +2,7 @@
 @import "ionicicons";
 @import "fonts";
 @import "ligature";
+@import "vittorio";
 
 *{
   font-family: Roboto;
@@ -36,7 +37,9 @@ body {
   margin-bottom: 0;
   line-height: 3rem;
 }
-
+.margin-top-50px{
+  margin-top:50px !important;
+}
 /* Custom page footer */
 .footer {
   padding-top: 1.5rem;
