fixed data picker

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3098,6 +3098,35 @@ http://kudakurage.com/ligature_symbols/
 .lsf-icon.amazon:before {
   content: '\E007';
 }
+.md-datepicker-button {
+  display: none;
+}
+.md-datepicker-input {
+  font-family: Roboto;
+}
+.md-datepicker-input-container {
+  border-bottom: none;
+}
+.search-edition .md-datepicker-input {
+  font-family: Roboto;
+  width: 160px;
+  font-size: 16px;
+}
+.search-edition .md-datepicker-input-container {
+  border-bottom: none;
+  margin-top: 3px;
+}
+.publish_date_filter .md-datepicker-input {
+  font-family: Roboto;
+  width: 180px;
+  font-size: 16px;
+}
+.md-calendar-selected-date .md-calendar-date-selection-indicator {
+  background: #48AACC !important;
+}
+.md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator {
+  border: 1px solid #48AACC !important;
+}
 * {
   font-family: Roboto;
 }
@@ -3513,21 +3542,6 @@ textarea {
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
 }
-.md-datepicker-button {
-  display: none;
-}
-.search-edition .md-datepicker-input {
-  font-family: Roboto;
-  width: 160px;
-  font-size: 16px;
-}
-.search-edition .md-datepicker-input-container {
-  border-bottom: none;
-  margin-top: 3px;
-}
-.md-calendar-selected-date .md-calendar-date-selection-indicator {
-  background: #48AACC !important;
-}
-.md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator {
-  border: 1px solid #48AACC !important;
+.border-line {
+  border-bottom: 2px solid #E5E5E5;
 }
