--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -3,6 +3,7 @@
 @import "fonts";
 @import "ligature";
 @import "vittorio";
+@import "md-picker";
 
 *{
   font-family: Roboto;
@@ -491,29 +492,6 @@ input, textarea {
   border-bottom-left-radius: 0px;
 }
 
-.md-datepicker-button {
-  display: none;
-}
-
-.search-edition{
-  .md-datepicker-input{
-    font-family: Roboto;
-    width: 160px;
-    font-size:16px;
-  }
-  .md-datepicker-input-container{
-    border-bottom:none;
-    margin-top:3px;
-  }
-}
-
-.md-calendar-selected-date{
-  .md-calendar-date-selection-indicator{
-    background: @light-blue !important;
-  }
-}
-.md-calendar-date.md-calendar-date-today{
-  .md-calendar-date-selection-indicator{
-    border: 1px solid @light-blue !important;
-  }
+.border-line{
+  border-bottom: 2px solid @light-grey;
 }
