added better filters

--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -12,10 +12,12 @@
 body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-  background-color: @white;
+  background-color: @white !important;
   min-width: 840px !important;
 }
-
+html{
+  background-color: @white !important;
+}
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
