--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3134,8 +3134,11 @@ http://kudakurage.com/ligature_symbols/
 body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-  background-color: white;
+  background-color: white !important;
   min-width: 840px !important;
+}
+html {
+  background-color: white !important;
 }
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
