--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -4,6 +4,7 @@
 @import "ligature";
 @import "vittorio";
 @import "md-picker";
+@import "animation";
 
 *{
   font-family: Roboto;
@@ -163,7 +164,7 @@ html{
     width: 100%;
     height: 442px;
 
-    border: 2px solid @light-grey;
+    border: 1px solid @light-grey;
     border-radius: 20px;
     margin-left:auto;
     margin-right:auto;
@@ -303,13 +304,13 @@ form.communityform {
   font-family: RobotoMedium !important;
   font-weight: 500;
   background-color: @white;
-  border: 2px solid @blue;
+  border: 1px solid @blue;
   color: @blue;
   font-size: 14px;
   padding: 10px 25px;
 
   &:hover, &:focus, &:active{
-    border: 2px solid @blue !important;
+    border: 1px solid @blue !important;
     color: @blue;
   }
 
@@ -317,7 +318,7 @@ form.communityform {
 
     width: 150px;
     padding-left: 10px;
-    border: 2px solid @blue !important;
+    border: 1px solid @blue !important;
   }
 }
 
@@ -326,14 +327,14 @@ form.communityform {
   font-weight: 500;
   background-color: white;
   color: @mid-grey;
-  border: 2px solid @mid-grey;
+  border: 1px solid @mid-grey;
   font-size: 14px;
   padding: 10px 15px;
   margin-top: 10px;
 
 
   &:hover, &:focus, &:active{
-    border: 2px solid @mid-grey !important;
+    border: 1px solid @mid-grey !important;
     color: @mid-grey;
   }
 }
