--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -498,3 +498,8 @@ input, textarea {
 .border-line{
   border-bottom: 2px solid @light-grey;
 }
+
+.form-control.ui-select-search{
+  padding-top:0px;
+  padding-bottom:0px;
+}
