--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -503,3 +503,7 @@ input, textarea {
   padding-top:0px;
   padding-bottom:0px;
 }
+
+.ui-select-bootstrap .ui-select-choices-row.active>span{
+  background-color: @light-blue;
+}
