Two tab body to do

--- a/app/assets/css/colors.less
+++ b/app/assets/css/colors.less
@@ -1,18 +1,24 @@
 @master: #D93E5F;
 @blue: #48AACC;
 @light-blue: #48AACC;
+@blue-tab: #3FA9F5;
 @mid-grey:#939393;
 @grey:#808080;
 @light-grey: #E5E5E5;
+@border-grey: #CCCCCC;
 @red: #D93E5F;
 @green : #24C40D;
 @white: white;
+@black: black;
 @smart: #D93E5F;
 @light-red: #FDE9EA;
 
 .color-grey{
   color: @grey;
 }
+.color-black{
+  color: @black;
+};
 .color-mid-grey{
   color: @mid-grey;
 }
