--- a/app/assets/css/vittorio.less
+++ b/app/assets/css/vittorio.less
@@ -4,4 +4,184 @@
 
   color: @mid-grey;
 
+  .nav-tabs{
+    height: 50px;
+  }
+
+  .nav-tabs > li{
+    height: 50px;
+    border: 0;
+    border-radius: 5px;
+  }
+
+  .nav-tabs > li > a{
+    font-size: 13px;
+    color: @grey;
+    font-weight: bold;
+    height: 50px;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-right: 10px;
+    padding-left: 10px;
+    margin: 0;
+  }
+
+
+  #tab0 > a > .ng-scope > label{
+    vertical-align: 30%;
+  }
+
+  #tab1 > a > .ng-scope > label{
+    vertical-align: 40%;
+  }
+  #tab2 > a > .ng-scope > label{
+    vertical-align: 20%;
+  }
+
+
+  li > a > .ng-scope > label{
+    margin-right: 20px;
+    vertical-align: 35%;
+    margin-bottom: 0;
+  }
+
+  #tab0 > a{
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+  }
+
+  #tab0 > a > .ng-scope > .icon-tab{
+    font-size: 35px;
+    font-weight: normal;
+    padding-right: 10px;
+  }
+
+  #tab1 > a{
+    border-radius: 0;
+  }
+
+  #tab1 > a > .ng-scope > .icon-tab{
+    font-size: 30px;
+    font-weight: normal;
+    padding-right: 10px;
+    vertical-align: bottom;
+  }
+
+  #tab2 > a{
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+  }
+
+  #tab2 > a > .ng-scope > .icon-tab{
+    font-size: 30px;
+    font-weight: normal;
+    padding-right: 10px;
+    vertical-align: 10%;
+  }
+
+  #tab0{
+    border-top-left-radius: 5px;
+    border: thin @grey;
+  }
+
+  #tab1{
+    border: thin @grey;
+  }
+
+  #tab2{
+    border-top-right-radius: 5px;
+    border: thin @grey;
+  }
+
+  .nav-tabs > li > a > .ng-scope{
+
+  }
+
+  .nav-tabs > li.active > a{
+    background-color: @blue-tab;
+    color: @white;
+  }
+
+  .new-channel-name{
+    border: none;
+    font-family: Roboto;
+    font-size: 18px;
+    margin-left: -10px;
+    margin-bottom: 10px;
+  }
+
+  .container-settings{
+    top: 40px;
+  }
+
+  .div-icon{
+    border-radius: 5px;
+    border: 1px solid @border-grey;
+    height: 80px;
+  }
+
+  .btn-selected-settings{
+    border: 1px solid @blue-tab;
+    background-color: @white;
+    color: @blue-tab;
+    margin-top: 20px;
+    font-weight: bold;
+    padding: 10px;
+  }
+
+  .new-channel-author{
+    border: none;
+    font-family: Roboto;
+    font-size: 14px;
+    margin-left: -10px;
+    margin-bottom: 10px;
+  }
+
+  .btn-add-author{
+    border-radius: 100%;
+    height: 40px;
+    width: 40px;
+    font-size: 20px;
+  }
+
+  .label-add-author{
+    font-size: 16px;
+    font-weight: normal;
+    margin-left: 10px;
+  }
+
+  .btn-delete-settings{
+    border: 1px solid @red;
+    background-color: @white;
+    color: @red;
+    margin-top: 20px;
+    margin-right: 5px;
+    font-weight: bold;
+    padding: 10px;
+  }
+
+  .btn-block-settings{
+    border: 1px solid @grey;
+    background-color: @white;
+    color: @grey;
+    margin-top: 20px;
+    font-weight: bold;
+    padding: 10px;
+  }
+
+  .btn-save-settings{
+    border: 1px solid @green;
+    background-color: @white;
+    color: @green;
+    margin-top: 20px;
+    font-weight: bold;
+    padding: 10px;
+    float: right;
+  }
+
+  .container-modifier{
+    margin-bottom: 30px;
+  }
+
+
 }
