--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -14,7 +14,7 @@ body {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background-color: @white !important;
-  min-width: 840px !important;
+  min-width: 900px !important;
 }
 html{
   background-color: @white !important;
@@ -506,4 +506,8 @@ input, textarea {
 
 .ui-select-bootstrap .ui-select-choices-row.active>span{
   background-color: @light-blue;
+}
+
+.border-right-mid-grey{
+  border-right: 1px solid @light-grey;
 }
