Add new channel page

--- a/app/assets/css/colors.less
+++ b/app/assets/css/colors.less
@@ -6,6 +6,7 @@
 @grey:#808080;
 @light-grey: #E5E5E5;
 @border-grey: #CCCCCC;
+@day-text-grey: #444444;
 @red: #D93E5F;
 @green : #24C40D;
 @white: white;
@@ -15,6 +16,9 @@
 
 .color-grey{
   color: @grey;
+}
+.color-day-text-grey{
+  color: @day-text-grey;
 }
 .color-black{
   color: @black;
