added stats to channels

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2,6 +2,12 @@
 .color-grey {
   color: #808080;
 }
+.color-day-text-grey {
+  color: #444444;
+}
+.color-black {
+  color: black;
+}
 .color-mid-grey {
   color: #939393;
 }
@@ -3097,6 +3103,169 @@ http://kudakurage.com/ligature_symbols/
 }
 .lsf-icon.amazon:before {
   content: '\E007';
+}
+#new_channel {
+  color: #939393;
+}
+#new_channel .nav-tabs {
+  height: 50px;
+}
+#new_channel .nav-tabs > li {
+  height: 50px;
+  border: 0;
+  border-radius: 5px;
+}
+#new_channel .nav-tabs > li > a {
+  font-size: 13px;
+  color: #808080;
+  font-weight: bold;
+  height: 50px;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin: 0;
+}
+#new_channel #tab0 > a > .ng-scope > label {
+  vertical-align: 30%;
+}
+#new_channel #tab1 > a > .ng-scope > label {
+  vertical-align: 40%;
+}
+#new_channel #tab2 > a > .ng-scope > label {
+  vertical-align: 20%;
+}
+#new_channel li > a > .ng-scope > label {
+  margin-right: 20px;
+  vertical-align: 35%;
+  margin-bottom: 0;
+}
+#new_channel #tab0 > a {
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
+  border: 1px solid #CCCCCC;
+  border-right: 0;
+}
+#new_channel #tab0 > a > .ng-scope > .icon-tab {
+  font-size: 35px;
+  font-weight: normal;
+  padding-right: 10px;
+}
+#new_channel #tab1 > a {
+  border-radius: 0;
+  border: 1px solid #CCCCCC;
+}
+#new_channel #tab1 > a > .ng-scope > .icon-tab {
+  font-size: 30px;
+  font-weight: normal;
+  padding-right: 10px;
+  vertical-align: bottom;
+}
+#new_channel #tab2 > a {
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+  border: 1px solid #CCCCCC;
+  border-left: 0;
+}
+#new_channel #tab2 > a > .ng-scope > .icon-tab {
+  font-size: 30px;
+  font-weight: normal;
+  padding-right: 10px;
+  vertical-align: 10%;
+}
+#new_channel #tab0 {
+  border-top-left-radius: 5px;
+}
+#new_channel #tab2 {
+  border-top-right-radius: 5px;
+}
+#new_channel .nav-tabs > li.active > a {
+  background-color: #3FA9F5;
+  color: white;
+}
+#new_channel .new-channel-name {
+  border: none;
+  font-family: Roboto;
+  font-size: 18px;
+  margin-left: -10px;
+  margin-bottom: 10px;
+}
+#new_channel .container-settings {
+  top: 40px;
+}
+#new_channel .div-icon {
+  border-radius: 5px;
+  border: 1px solid #CCCCCC;
+  height: 80px;
+}
+#new_channel .btn-selected-settings {
+  border: 1px solid #3FA9F5;
+  background-color: white;
+  color: #3FA9F5;
+  margin-top: 20px;
+  font-weight: bold;
+  padding: 10px;
+}
+#new_channel .new-channel-author {
+  border: none;
+  font-family: Roboto;
+  font-size: 14px;
+  margin-left: -10px;
+  margin-bottom: 10px;
+}
+#new_channel .btn-add-author {
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  font-size: 20px;
+}
+#new_channel .label-add-author {
+  font-size: 16px;
+  font-weight: normal;
+  margin-left: 10px;
+}
+#new_channel .btn-delete-settings {
+  border: 1px solid #D93E5F;
+  background-color: white;
+  color: #D93E5F;
+  margin-top: 20px;
+  margin-right: 5px;
+  font-weight: bold;
+  padding: 10px;
+}
+#new_channel .btn-block-settings {
+  border: 1px solid #808080;
+  background-color: white;
+  color: #808080;
+  margin-top: 20px;
+  font-weight: bold;
+  padding: 10px;
+}
+#new_channel .btn-save-settings {
+  border: 1px solid #24C40D;
+  background-color: white;
+  color: #24C40D;
+  margin-top: 20px;
+  font-weight: bold;
+  padding: 10px;
+  float: right;
+}
+#new_channel .container-modifier {
+  margin-bottom: 30px;
+}
+#new_channel .table-day-text {
+  font-size: 18px;
+  color: #444444 !important;
+}
+#new_channel .table-day-text span {
+  font-size: 18px;
+  color: #444444 !important;
+}
+#new_channel .table-day-text::-webkit-input-placeholder {
+  color: #444444 !important;
+}
+#new_channel .container-hour {
+  margin-top: 40px;
 }
 .md-datepicker-button {
   display: none;
