--- a/app/assets/css/main.less
+++ b/app/assets/css/main.less
@@ -2,7 +2,7 @@
 @import "ionicicons";
 @import "fonts";
 @import "ligature";
-@import "vittorio";
+@import "channelDetail";
 @import "md-picker";
 @import "animation";
 
