--- a/app/assets/css/md-picker.css
+++ b/app/assets/css/md-picker.css
@@ -1,6 +1,12 @@
 .color-grey {
   color: #808080;
 }
+.color-day-text-grey {
+  color: #444444;
+}
+.color-black {
+  color: black;
+}
 .color-mid-grey {
   color: #939393;
 }
